layout shift fix

--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@ body {
 
 .umbrella-img {
     width: 80%;
-    margin-top: 40px;
     position: absolute;
     opacity: 0;
     transition: opacity 1s ease-in-out;
@@ -12,7 +11,6 @@ body {
 
 .loading-animation {
     width: 8%;
-    height: 700px;
     position: absolute;
     animation: rotation 2s infinite ease-in-out;
 }
@@ -31,9 +29,10 @@ body {
     width: 50%;
     padding: 50px;
     position: relative;
-
+    height: 100vh;
     display: flex;
     justify-content: center;
+    align-items: center;
 
 }
 
